修改配置方式

--- a/app/src/main/res/layout/activity_rotatable_text_view.xml
+++ b/app/src/main/res/layout/activity_rotatable_text_view.xml
@@ -7,6 +7,8 @@
 
     <ImageView
         android:id="@+id/ivFavor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/ic_favor"
         android:layout_width="60dp"
         android:layout_height="60dp"/>
