--- a/app/src/main/res/layout/activity_rotatable_text_view.xml
+++ b/app/src/main/res/layout/activity_rotatable_text_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,4 +55,4 @@
         app:rtvPressedFillColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
