--- a/app/src/main/res/layout/activity_rotatable_text_view.xml
+++ b/app/src/main/res/layout/activity_rotatable_text_view.xml
@@ -13,46 +13,46 @@
         android:layout_width="60dp"
         android:layout_height="60dp"/>
     
-    <com.snail.widget.RotatableTextView
+    <com.snail.widget.textview.RotatableTextView
         android:id="@+id/tvRotate"
         android:textSize="12sp"
         android:text="已收藏"
         android:textColor="#fff"
-        app:rtvDegree="-45"
+        app:wswDegree="-45"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="40dp"
         android:layout_height="wrap_content"/>
     
-    <com.snail.widget.ClearEditText
+    <com.snail.widget.textview.ClearEditText
         android:id="@+id/et"
         app:layout_constraintTop_toBottomOf="@id/ivFavor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
-    <com.snail.widget.RoundButton
+    <com.snail.widget.textview.RoundButton
         android:id="@+id/btn"
         android:text="设置文本"
         android:textColor="#fff"
-        app:rbRippleColor="#8000"
-        app:rbCornerRadius="4dp"
-        app:rbNormalFillColor="@color/colorPrimary"
-        app:rbPressedFillColor="@color/colorPrimary"
+        app:wswRippleColor="#8000"
+        app:wswCornerRadius="4dp"
+        app:wswNormalFillColor="@color/colorPrimary"
+        app:wswPressedFillColor="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@id/et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
-    <com.snail.widget.RoundTextView
+    <com.snail.widget.textview.RoundTextView
         android:id="@+id/tv"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/btn"
         android:gravity="center"
         android:text="test"
         android:textColor="#fff"
-        app:rtvRippleColor="#8000"
-        app:rtvCornerRadius="1dp"
-        app:rtvNormalFillColor="@color/colorPrimary"
-        app:rtvPressedFillColor="@color/colorPrimary"
+        app:wswRippleColor="#8000"
+        app:wswCornerRadius="1dp"
+        app:wswNormalFillColor="@color/colorPrimary"
+        app:wswPressedFillColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
