--- a/app/src/main/res/layout/activity_horizontal_label_picker.xml
+++ b/app/src/main/res/layout/activity_horizontal_label_picker.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <com.snail.widget.HorizontalLabelPicker
+    <cn.wandersnail.widget.HorizontalLabelPicker
         android:id="@+id/labelPicker"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
