--- a/app/src/main/res/layout/activity_rotatable_text_view.xml
+++ b/app/src/main/res/layout/activity_rotatable_text_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"/>
     
-    <com.snail.widget.textview.RotatableTextView
+    <cn.wandersnail.widget.textview.RotatableTextView
         android:id="@+id/tvRotate"
         android:textSize="12sp"
         android:text="已收藏"
@@ -24,13 +24,13 @@
         android:layout_width="40dp"
         android:layout_height="wrap_content"/>
     
-    <com.snail.widget.textview.ClearEditText
+    <cn.wandersnail.widget.textview.ClearEditText
         android:id="@+id/et"
         app:layout_constraintTop_toBottomOf="@id/ivFavor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:id="@+id/btn"
         android:text="设置文本"
         android:textColor="#fff"
