--- a/app/src/main/res/layout/activity_round_button.xml
+++ b/app/src/main/res/layout/activity_round_button.xml
@@ -6,7 +6,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:textColor="@color/white"
         android:text="圆角按钮，颜色可自定义"
         app:wswCornerRadius="8dp"
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:textColor="@color/white"
         android:text="圆角按钮，颜色可自定义"
         app:wswCornerRadius="50dp"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:text="圆角按钮，颜色可自定义"
         app:wswCornerRadius="8dp"
         android:layout_marginTop="10dp"
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:text="圆角按钮，颜色可自定义"
         app:wswCornerRadius="50dp"
         android:layout_marginTop="10dp"
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
         android:text="圆角按钮，颜色可自定义"
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
-    <com.snail.widget.textview.RoundButton
+    <cn.wandersnail.widget.textview.RoundButton
         android:text="圆角按钮，颜色可自定义"
         app:wswCornerRadius="50dp"
         android:layout_marginTop="10dp"
